--- a/ymir/templates/components/button.html
+++ b/ymir/templates/components/button.html
@@ -30,34 +30,47 @@ Usage:
 {% set padding = 'py-2 px-4' %}
 {% endif %}
 
+{% set has_left_icon = (button_loading_indicator is defined and button_loading_indicator) or (button_icon is defined and
+button_icon and button_icon_position|default('left') == "left") %}
+{% set has_right_icon = button_icon is defined and button_icon and button_icon_position|default('left') == "right" %}
+
 <button type="{{ button_type|default('button') }}" {% if button_id is defined %}id="{{ button_id }}" {% endif %}
-    class="{{ button_colors[button_color|default('red')] }} text-white font-medium {{ padding }} rounded-md transition-colors duration-200 flex items-center justify-center shadow-sm {{ button_additional_classes|default('') }}"
+    class="{{ button_colors[button_color|default('red')] }} text-white font-medium {{ padding }} rounded-md transition-colors duration-200 flex items-center shadow-sm {{ button_additional_classes|default('') }}"
     {{ button_htmx_attrs|default('') }}>
 
-    {% if button_loading_indicator is defined and button_loading_indicator %}
-    <div {% if button_indicator_id is defined %}id="{{ button_indicator_id }}" {% endif %} class="htmx-indicator mr-2">
-        <svg class="animate-spin h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-            <path class="opacity-75" fill="currentColor"
-                d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
-            </path>
+    <!-- Left icon container with fixed width -->
+    <div class="w-5 flex-shrink-0 flex justify-start mr-2 {% if not has_left_icon %}invisible{% endif %}">
+        {% if button_loading_indicator is defined and button_loading_indicator %}
+        <div {% if button_indicator_id is defined %}id="{{ button_indicator_id }}" {% endif %}
+            class="htmx-indicator inline-flex">
+            <svg class="animate-spin h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
+                viewBox="0 0 24 24">
+                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                <path class="opacity-75" fill="currentColor"
+                    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                </path>
+            </svg>
+        </div>
+        {% elif button_icon is defined and button_icon and button_icon_position|default('left') == "left" %}
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd"
+                d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM6.293 6.707a1 1 0 010-1.414l3-3a1 1 0 011.414 0l3 3a1 1 0 01-1.414 1.414L11 5.414V13a1 1 0 11-2 0V5.414L7.707 6.707a1 1 0 01-1.414 0z"
+                clip-rule="evenodd" />
         </svg>
+        {% endif %}
     </div>
-    {% elif button_icon is defined and button_icon and button_icon_position|default('left') == "left" %}
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
-        <path fill-rule="evenodd"
-            d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM6.293 6.707a1 1 0 010-1.414l3-3a1 1 0 011.414 0l3 3a1 1 0 01-1.414 1.414L11 5.414V13a1 1 0 11-2 0V5.414L7.707 6.707a1 1 0 01-1.414 0z"
-            clip-rule="evenodd" />
-    </svg>
-    {% endif %}
 
-    {{ button_text|default('Button') }}
+    <!-- Text centered in the available space -->
+    <span class="flex-grow text-center">{{ button_text|default('Button') }}</span>
 
-    {% if button_icon is defined and button_icon and button_icon_position|default('left') == "right" %}
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" viewBox="0 0 20 20" fill="currentColor">
-        <path fill-rule="evenodd"
-            d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM6.293 6.707a1 1 0 010-1.414l3-3a1 1 0 011.414 0l3 3a1 1 0 01-1.414 1.414L11 5.414V13a1 1 0 11-2 0V5.414L7.707 6.707a1 1 0 01-1.414 0z"
-            clip-rule="evenodd" />
-    </svg>
-    {% endif %}
+    <!-- Right icon container with fixed width -->
+    <div class="w-5 flex-shrink-0 flex justify-end ml-2 {% if not has_right_icon %}invisible{% endif %}">
+        {% if button_icon is defined and button_icon and button_icon_position|default('left') == "right" %}
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd"
+                d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM6.293 6.707a1 1 0 010-1.414l3-3a1 1 0 011.414 0l3 3a1 1 0 01-1.414 1.414L11 5.414V13a1 1 0 11-2 0V5.414L7.707 6.707a1 1 0 01-1.414 0z"
+                clip-rule="evenodd" />
+        </svg>
+        {% endif %}
+    </div>
 </button>
